Fixed bootstrap link, fixed spacing and col+rows.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,33 +8,25 @@
 }
 body{
   font-family: 'Questrial', sans-serif;
-  width: 100%;
-  height: 100%;
 }
 .body{
-  padding-top: 9em;
-}
-/* Header */
-header{
-  position: fixed;
-  overflow: hidden;
-  background-color: #FFFFFF;
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 10.5em;
 }
 /* Shadow */
 #shadow{
   -moz-box-shadow: 0px 0px 11px rgba(0,0,0,1);
   -webkit-box-shadow: 0px 0px 11px rgba(0,0,0,1);
   box-shadow: 0px 0px 11px rgba(0,0,0,1);
-  position: fixed;
+  width: 100%;
+  background-color: #FFFFFF;
+  overflow: hidden;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 #shadow h1{
   font-size: 2em;
   text-align: center;
   letter-spacing: 1px;
-  padding-top: 2%;
 }
 #shadow img{
   float: left;
@@ -47,18 +39,19 @@ header{
   background-color: #CCC;
   border: 4px solid #DDD;
   box-shadow: 0 0 5px #333;
-  margin: 10px;
-  height: 50%;
+  height: 100%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 /* Text Section */
 #text-wrap{
-  float: left;
   text-align: center;
   background-color: white;
   border: 1px double #DDD;
   border-radius: 5px;
   box-shadow: 0 0 5px #666;
-  margin: 10px;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 #text-wrap h2{
   font-weight: 900;
@@ -81,7 +74,7 @@ header{
   border-radius: 5px;
   box-shadow: 0 0 5px #333;
   height: 4em;
-  width: 45em;
+  width: 25em;
 }
 .button{
   text-align: center;
@@ -120,25 +113,10 @@ header{
   display: none;
   background-color: #DCF7F7;
 }
-/* Footer */
-footer{
-  background-color: #FFFFFF;
-  width: auto;
-  overflow: hidden;
-  height: auto;
-}
-footer p{
-  color: black;
-  font-size: 1em;
-  float: left;
-  margin-top: 0.5%auto;
-  margin-left: 1%;
-  margin-bottom: 0.2%;
-  opacity: 0.5;
-}
-/* Site Wrapper - Everything that isn't navigation */
+/* Site Wrapper */
 .site-wrap{
-  height: 100%;
-  width: 100%;
+  width: auto;
+  height: auto;
+  overflow: scroll;
   background-image: linear-gradient(135deg, rgb(254,255,255) 0%,rgb(229,255,255) 35%,rgb(203,255,255) 75%, rgb(178,255,255) 100%);
 }
